--- a/web/pom.xml
+++ b/web/pom.xml
@@ -12,6 +12,7 @@
     <artifactId>web</artifactId>
     <packaging>jar</packaging>
 
+
     <dependencies>
         <dependency>
             <groupId>com.javatechie</groupId>
@@ -23,4 +24,13 @@
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
     </dependencies>
+
+    <build>
+            <plugins>
+                <plugin>
+                    <groupId>org.springframework.boot</groupId>
+                    <artifactId>spring-boot-maven-plugin</artifactId>
+                </plugin>
+            </plugins>
+    </build>
 </project>
